# adas-multicore-pipeline

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
config/: _tmp_zero_miss_check.json  adas_pipeline_config.json  ecu_profiles.json  pipeline_config.json  radar_pipeline_config.json
docs/: SIMULATOR_FEATURES_PLAN.md
docs/System/: ADAS_Pipeline.md  CDI_Architecture_Diagram.md  LKA.md  Simulator_Concepts.md
include/core/: bandwidth_manager.h  concurrent_queue.h  config_loader.h  task_scheduler.h  thread_pool.h  types.h
include/metrics/: metrics_collector.h
include/pipeline/: configured_stage.h  detection_stage.h  pipeline.h  pipeline_stage.h  preprocess_stage.h  tracking_stage.h
include/scheduler/: fifo_scheduler.h  scheduler.h
include/sensors/: camera_sensor.h  radar_sensor.h  sensor.h  vehicle_state_sensor.h
include/visualization/: timeline_visualizer.h
src/: main.cpp
src/core/: bandwidth_manager.cpp  config_loader.cpp  task_scheduler.cpp  thread_pool.cpp
src/metrics/: metrics_collector.cpp
src/pipeline/: configured_stage.cpp  detection_stage.cpp  pipeline.cpp  preprocess_stage.cpp  tracking_stage.cpp
src/scheduler/: fifo_scheduler.cpp
src/sensors/: camera_sensor.cpp  radar_sensor.cpp  vehicle_state_sensor.cpp
src/viewer/: adas_viewer.cpp
src/visualization/: timeline_visualizer.cpp
tools/: __init__.py  generate_mermaid.py  requirements_gui.txt  system_config_gui.py
